# ComfyUI-SKLora-Manager

./: .gitignore  LICENSE  __init__.py  pyproject.toml  readme-cn.md  readme.md  requirements.txt
data/: lora_manager_settings.json
data/initial_data/: basemodel_settings.json
locales/en/: nodeDefs.json
locales/zh/: nodeDefs.json
locales/zh-TW/: nodeDefs.json
nodes/: sk_interactive_editor.py  sk_lora_manager.py  sk_lora_meta_extractor.py  sk_lora_meta_inspector.py  sk_merge_prompt.py  sk_point_indexer.py  sk_prompt_matrix_v1.py  sk_prompt_matrix_v2.py  sk_prompt_matrix_v3.py
utils/: civitai_helper.py  data_manager.py  llm_providers.py  lora_db_manager.py  lora_manager_api.py  sk_health_manager.py
web/js/: main.js  mgr_panel.js  sk_health_ui.js  sk_interactive_editor.js  sk_lora_manager.js  sk_lora_manager.rar  sk_lora_meta_extractor.js  sk_lora_meta_inspector.js  sk_lora_selector.js  sk_merge_prompt.js  sk_point_indexer.js  sk_prompt_matrix_v1.js  sk_prompt_matrix_v2.js  sk_prompt_matrix_v3.js  trigger_words_manager.js  version.js
web/js/common/: icons.js  lang.js  toast_manager.js
